--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
   <div class="row">
     <div class="span4">
       <h4><i class="icon-flag"></i>  All the icons you need in One font</h4>
-      Humanitarian Font is a pictographic language of humanitarian & web-related actions.
+      Humanitarian Font is a pictographic language of humanitarian & web-related actions. The font has been generated with <a href="http://fontforge.org/" target="_blank">FontForge</a>.
     </div>
     <div class="span4">
       <h4><i class="icon-pencil"></i> CSS control</h4>
-      Easily style icon color, size, shadow, and anything that's possible with CSS.
+      Easily style icon color, size, shadow, and anything that's possible with CSS. Check some examples <a href="http://css-tricks.com/examples/IconFont/" target="_blank">here</a> or <a href="http://css-tricks.com/five-use-cases-for-icon-fonts/"  target="_blank">here</a>.
     </div>
     <div class="span4">
       <h4><i class="icon-fullscreen"></i> Infinite scalability</h4>
@@ -152,7 +152,7 @@
     </div>
     <div class="span4">
       <h4><i class="icon-lightbulb"></i> Open to suggestion</h4>
-      Let's build a community on the <a href="https://github.com/unhcr/Humanitarian-Font/issues" target="_blank">Humanitarian Font GitHub project</a>.
+      Share feedback and comments on the <a href="https://github.com/unhcr/Humanitarian-Font/issues" target="_blank">Humanitarian Font GitHub project</a>.
     </div>
   </div>
 </section>
@@ -1042,10 +1042,10 @@
       <div class="span8">
         <h2>Special Thanks</h2>
         <p>
-          Special thanks to OCHA: <a href="https://twitter.com/fortaweso_me/" target="_blank">@FortAweso_me</a> for the sector icons!
+          Special thanks to <a href="http://reliefweb.int/map/world/world-humanitarian-and-country-icons-2012" target="_blank">OCHA</a> and <a href="http://thenounproject.com/ochaavmu/#" target="_blank">Noun Project</a> for the sector icons!
         </p>
         <p>
-          Special thanks to CartONG: <a href="https://twitter.com/fortaweso_me/" target="_blank">@FortAweso_me</a> for the organisation icons!
+          Special thanks to <a href="http://www.cartong.org/" target="_blank">CartONG</a> for the organisation icons!
         </p>
         <p>
           Special thanks to Dave Gandy: <a href="https://twitter.com/fortaweso_me/" target="_blank">@FortAweso_me</a> for the awesome icon font!
