--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
           <div class="active item"><div><i class="icon-ocha-sector-protection"></i></div></div>
           <div class="item"><div><i class="icon-unhcr-office"></i></div></div>
           <div class="item"><div><i class="icon-ocha-sector-registration"></i></div></div>
+          <div class="item"><div><i class="icon-ocha-affected-elderly"></i></div></div>
+          <div class="item"><div><i class="icon-ocha-affected-baby"></i></div></div>
+          <div class="item"><div><i class="icon-ocha-affected-child"></i></div></div>
           <div class="item"><div><i class="icon-ocha-sector-campmanagement"></i></div></div>
           <div class="item"><div><i class="icon-ocha-sector-foodsecurity"></i></div></div>
           <div class="item"><div><i class="icon-ocha-sector-health"></i></div></div>
@@ -165,34 +168,39 @@
 
   <div class="span3">
     <ul class="the-icons">
+      <li><i class="icon-ocha-sector-coordination"></i> Coordination</li>
+      <li><i class="icon-ocha-sector-protection"></i> Protection</li>
+      <li><i class="icon-ocha-sector-campmanagement"></i> Camp Management</li>
       <li><i class="icon-ocha-sector-registration"></i> Registration</li>
-      <li><i class="icon-ocha-sector-security"></i> Security</li>
-      <li><i class="icon-ocha-sector-recovery"></i> Recovery</li>
     </ul>
   </div>
   <div class="span3">
     <ul class="the-icons">
       <li><i class="icon-ocha-sector-education"></i> Education</li>
-      <li><i class="icon-ocha-sector-telecommunication"></i> Telecommunication</li>
       <li><i class="icon-ocha-sector-foodsecurity"></i> Food security</li>
+      <li><i class="icon-ocha-sector-telecommunication"></i> Telecommunication</li>
+      <li><i class="icon-ocha-sector-sgbv"></i> SGBV</li>
     </ul>
   </div>
   <div class="span3">
     <ul class="the-icons">
+      <li><i class="icon-ocha-sector-wash"></i> Wash</li>
       <li><i class="icon-ocha-sector-health"></i> Health</li>
       <li><i class="icon-ocha-sector-logistic"></i> Logistic</li>
-      <li><i class="icon-ocha-sector-wash"></i> Wash</li>
       <li><i class="icon-ocha-sector-agriculture"></i> Agriculture</li>
     </ul>
   </div>
   <div class="span3">
     <ul class="the-icons">
-      <li><i class="icon-ocha-sector-coordination"></i> Coordination</li>
-      <li><i class="icon-ocha-sector-protection"></i> Protection</li>
-      <li><i class="icon-ocha-sector-campmanagement"></i> Camp Management</li>
+      <li><i class="icon-ocha-sector-livelihood"></i> Livelihood</li>
+      <li><i class="icon-ocha-sector-security"></i> Security</li>
+      <li><i class="icon-ocha-sector-recovery"></i> Recovery</li>
     </ul>
   </div>
 </section>
+
+
+
 
 <section id="icons-item" class="row">
   <div class="span12">
@@ -231,6 +239,27 @@
   </div>
 </section>
 
+
+<section id="icons-affected" class="row">
+    <div class="span12">
+        <h2 class="page-header"> Affected population</h2>
+  </div>
+
+  <div class="span6">
+    <ul class="the-icons">
+      <li><i class="icon-ocha-affected-population"></i> Population</li>
+      <li><i class="icon-ocha-affected-man"></i> Man</li>
+      <li><i class="icon-ocha-affected-woman"></i> Woman</li>
+       </ul>
+  </div>
+  <div class="span6">
+    <ul class="the-icons">
+      <li><i class="icon-ocha-affected-elderly"></i> Elderly</li>
+      <li><i class="icon-ocha-affected-baby"></i> baby</li>
+      <li><i class="icon-ocha-affected-child"></i> Child</li>
+    </ul>
+  </div>
+</section>
 
 <section id="icons-un" class="row">
     <div class="span12">
