add mapping icons

--- a/index.html
+++ b/index.html
@@ -261,6 +261,35 @@
   </div>
 </section>
 
+<section id="icons-map" class="row">
+    <div class="span12">
+        <h2 class="page-header"> UNHCR Mapping</h2>
+  </div>
+
+  <div class="span6">
+    <ul class="the-icons">
+
+      <li><i class="icon-unhcr-office"></i> Office</li>
+      <li><i class="icon-unhcr-locations-camp"></i> Camp</li>
+      <li><i class="icon-unhcr-locations-settlement"></i> Settlement</li>
+      <li><i class="icon-unhcr-location-accommodation"></i> Accommodation</li>
+      <li><i class="icon-unhcr-locations-dispersed-population"></i> Dispersed Population</li>
+       </ul>
+  </div>
+  <div class="span6">
+    <ul class="the-icons">
+      <li><i class="icon-unhcr-locations-centre"></i> Center</li>
+      <li><i class="icon-unhcr-locations-urban"></i> Urban Location</li>
+      <li><i class="icon-unhcr-location"></i> Location</li>
+      <li><i class="icon-unhcr-reception-centre"></i> Reception Centre</li>
+      <li><i class="icon-unhcr-detention-centre"></i> Detention Centre</li>
+      <li><i class="icon-unhcr-entry-facility-centre"></i> Facility Centre</li>
+    </ul>
+  </div>
+</section>
+
+
+
 <section id="icons-un" class="row">
     <div class="span12">
         <h2 class="page-header"> UN Agencies </h2>
