--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h1>Humanitarian Font</h1>
         <p>The iconic font designed for the <br>Humanitarian</p>
         <div class="actions">
-          <a class="btn btn-primary btn-large" href="https://github.com/unhcr/Humanitarian-Font/zipball/master"
+          <a class="btn btn-primary btn-large" href="https://github.com/unhcr/Humanitarian-Font/archive/gh-pages.zip"
              onClick="_gaq.push(['_trackEvent', 'Outbound Link', 'Download on GitHub']);">
             <i class="icon-download icon-2x pull-left"></i>
             Download the <br>Font</a>
