--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
           <div class="item"><div><i class="icon-ocha-sector-campmanagement"></i></div></div>
           <div class="item"><div><i class="icon-ocha-sector-foodsecurity"></i></div></div>
           <div class="item"><div><i class="icon-ocha-sector-health"></i></div></div>
+          <div class="item"><div><i class="icon-office-diplomatic"></i></div></div>
+          <div class="item"><div><i class="icon-office-united-nations"></i></i></div></div>
           <div class="item"><div><i class="icon-ocha-sector-logistic"></i></div></div>
           <div class="item"><div><i class="icon-ocha-sector-wash"></i></div></div>
           <div class="item"><div><i class="icon-ocha-sector-security"></i></div></div>
@@ -274,12 +276,16 @@
       <li><i class="icon-unhcr-locations-settlement"></i> Settlement</li>
       <li><i class="icon-unhcr-location-accommodation"></i> Accommodation</li>
       <li><i class="icon-unhcr-locations-dispersed-population"></i> Dispersed Population</li>
+      <li><i class="icon-unhcr-locations-centre"></i> Center</li>
+      <li><i class="icon-unhcr-locations-urban"></i> Urban Location</li>
        </ul>
   </div>
   <div class="span6">
     <ul class="the-icons">
-      <li><i class="icon-unhcr-locations-centre"></i> Center</li>
-      <li><i class="icon-unhcr-locations-urban"></i> Urban Location</li>
+      <li><i class="icon-office-government"></i> Governement Office</li>
+      <li><i class="icon-office-diplomatic"></i> Diplomatic mission</li>
+      <li><i class="icon-office-united-nations"></i> United nations office</li>
+      <li><i class="icon-office-ngo"></i> NGO Office</li>
       <li><i class="icon-unhcr-location"></i> Location</li>
       <li><i class="icon-unhcr-reception-centre"></i> Reception Centre</li>
       <li><i class="icon-unhcr-detention-centre"></i> Detention Centre</li>
