--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
             <li class="nav-header">All Icons</li>
             <li><a href="#icons-sector"><i class="icon-edit"></i> Humanitarian Sector</a></li>
             <li><a href="#icons-item"><i class="icon-edit"></i> Relief Item</a></li>
-            <li><a href="#icons-organisation"><i class="icon-edit"></i> Humanitarian Organisation</a></li>
+            <li><a href="#icons-affected"><i class="icon-edit"></i> Affected Population</a></li>
+            <li><a href="#icons-event"><i class="icon-edit"></i> Events</a></li>
+            <li><a href="#icons-ngo"><i class="icon-edit"></i> Non Govenrmental Organisation</a></li>
+            <li><a href="#icons-un"><i class="icon-edit"></i> UN Agencies</a></li>
+            <li><a href="#icons-io"><i class="icon-edit"></i> International organisation</a></li>
+            <li><a href="#icons-ngo"><i class="icon-edit"></i> Humanitarian Organisation</a></li>
             <li><a href="#icons-map"><i class="icon-edit"></i> Icons for maps</a></li>
             <li><a href="#icons-infra"><i class="icon-edit"></i> Infrastructure</a></li>
             <li><a href="#icons-web-app"><i class="icon-edit"></i> Web Application</a></li>
@@ -197,6 +202,7 @@
       <li><i class="icon-ocha-sector-livelihood"></i> Livelihood</li>
       <li><i class="icon-ocha-sector-security"></i> Security</li>
       <li><i class="icon-ocha-sector-recovery"></i> Recovery</li>
+      <li><i class="icon-ocha-sector-community"></i> Community</li>
     </ul>
   </div>
 </section>
@@ -250,15 +256,49 @@
   <div class="span6">
     <ul class="the-icons">
       <li><i class="icon-ocha-affected-population"></i> Population</li>
+      <li><i class="icon-individual"></i> Individual</li>
       <li><i class="icon-ocha-affected-man"></i> Man</li>
       <li><i class="icon-ocha-affected-woman"></i> Woman</li>
+      <li><i class="icon-ocha-affected-disabled"></i> Disabled</li>
        </ul>
   </div>
   <div class="span6">
     <ul class="the-icons">
       <li><i class="icon-ocha-affected-elderly"></i> Elderly</li>
-      <li><i class="icon-ocha-affected-baby"></i> baby</li>
+      <li><i class="icon-ocha-affected-baby"></i> Baby</li>
       <li><i class="icon-ocha-affected-child"></i> Child</li>
+      <li><i class="icon-child_soldier"></i> Child Soldier</li>
+      <li><i class="icon-ocha-affected-dead"></i> Dead</li>
+    </ul>
+  </div>
+</section>
+
+<section id="icons-event" class="row">
+    <div class="span12">
+        <h2 class="page-header"> Events</h2>
+  </div>
+
+  <div class="span6">
+    <ul class="the-icons">
+      <li><i class="icon-event-bluehelmet"></i> Blue Helmet</li>
+      <li><i class="icon-event-force"></i> Force</li>
+      <li><i class="icon-event-collaborate"></i> Collaborate</li>
+      <li><i class="icon-event-foodshortage"></i> Food Shortage</li>
+      <li><i class="icon-event-judge"></i> Authorities</li>
+      <li><i class="icon-event-protest"></i> Protest</li>
+      <li><i class="icon-event-hit"></i> Hit</li>
+      <li><i class="icon-event-register"></i> Register</li>
+       </ul>
+  </div>
+  <div class="span6">
+    <ul class="the-icons">
+      <li><i class="icon-event-violence"></i> Violence</li>
+      <li><i class="icon-event-handshake"></i> Handshake</li>
+      <li><i class="icon-event-abduction"></i> Abduction</li>
+      <li><i class="icon-event-papercontrol"></i> Paper Control</li>
+      <li><i class="icon-event-cashwork"></i> Cash for Work</li>
+      <li><i class="icon-event-lecturer"></i> Training</li>
+      <li><i class="icon-event-gardening"></i> Gardening</li>
     </ul>
   </div>
 </section>
