Add a few icons

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
       <li><i class="icon-ocha-sector-protection"></i> Protection</li>
       <li><i class="icon-ocha-sector-campmanagement"></i> Camp Management</li>
       <li><i class="icon-ocha-sector-registration"></i> Registration</li>
+      <li><i class="icon-ocha-sector-shelter"></i> Shelter</li>
     </ul>
   </div>
   <div class="span3">
@@ -187,6 +188,7 @@
       <li><i class="icon-ocha-sector-foodsecurity"></i> Food security</li>
       <li><i class="icon-ocha-sector-telecommunication"></i> Telecommunication</li>
       <li><i class="icon-ocha-sector-sgbv"></i> SGBV</li>
+      <li><i class="icon-ocha-sector-childprotection"></i> Child Protection</li>
     </ul>
   </div>
   <div class="span3">
@@ -195,10 +197,12 @@
       <li><i class="icon-ocha-sector-health"></i> Health</li>
       <li><i class="icon-ocha-sector-logistic"></i> Logistic</li>
       <li><i class="icon-ocha-sector-agriculture"></i> Agriculture</li>
+      <li><i class="icon-ocha-sector-cash"></i> Cash</li>
     </ul>
   </div>
   <div class="span3">
     <ul class="the-icons">
+      <li><i class="icon-ocha-item-reliefgood"></i> Core Relief Item (NFI)</li>
       <li><i class="icon-ocha-sector-livelihood"></i> Livelihood</li>
       <li><i class="icon-ocha-sector-security"></i> Security</li>
       <li><i class="icon-ocha-sector-recovery"></i> Recovery</li>
@@ -233,7 +237,6 @@
   </div>
   <div class="span3">
     <ul class="the-icons">
-      <li><i class="icon-ocha-item-reliefgood"></i> Relief Good</li>
       <li><i class="icon-ocha-item-stove"></i> Stove</li>
       <li><i class="icon-ocha-item-tarpaulin"></i> Tarpaulin</li>
       <li><i class="icon-ocha-item-tent"></i> Tent</li>
@@ -241,6 +244,7 @@
   </div>
   <div class="span3">
     <ul class="the-icons">
+      <li><i class="icon-ocha-cash"></i> Cash</li>
       <li><i class="icon-ocha-item-mosquitonet"></i> Mosquitonet</li>
       <li><i class="icon-ocha-item-nonfooditem"></i> Non Food Item</li>
     </ul>
