ad basic needs icon

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         <div class="carousel-inner">
           <div class="active item"><div><i class="icon-ocha-sector-protection"></i></div></div>
           <div class="item"><div><i class="icon-unhcr-office"></i></div></div>
+          <div class="item"><div><i class="icon-basicneeds"></i></div></div>
           <div class="item"><div><i class="icon-ocha-sector-registration"></i></div></div>
           <div class="item"><div><i class="icon-ocha-affected-elderly"></i></div></div>
           <div class="item"><div><i class="icon-ocha-affected-baby"></i></div></div>
@@ -240,6 +241,7 @@
       <li><i class="icon-ocha-item-stove"></i> Stove</li>
       <li><i class="icon-ocha-item-tarpaulin"></i> Tarpaulin</li>
       <li><i class="icon-ocha-item-tent"></i> Tent</li>
+      <li><i class="icon-ocha-item-reliefgood"></i> item</li>
     </ul>
   </div>
   <div class="span3">
