Correct UNICEF name

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
     <ul class="the-icons">
       <li><i class="icon-orga-unfpa"></i> United Nations Fund for Population Activities</li>
       <li><i class="icon-orga-unhsp"></i> United Nations Human Settlement Programme or UN-Habitat</li>
-      <li><i class="icon-orga-unicef"></i> United Nations International Children's Emergency Fund</li>
+      <li><i class="icon-orga-unicef"></i> United Nations Children's Fund</li>
       <li><i class="icon-orga-unog"></i> United nations Office at Geneva</li>
       <li><i class="icon-orga-unitair"></i> United Nations Instutute for Training and Research</li>
       <li><i class="icon-orga-undoc"></i> United Nations Office on Drugs and Crime</li>
